--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.0.43",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.6.2",
