--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-parallax": "^3.5.2",
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.6.2",
     "swiper": "^11.2.8",
