--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "daisyui": "^5.0.43",
+    "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-parallax": "^3.5.2",
     "react-rating": "^2.0.5",
