--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.9.1",
     "react": "^19.1.0",
@@ -22,6 +23,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.6.2",
     "react-simple-captcha": "^9.3.1",
+    "sweetalert2": "^11.22.2",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10"
   },
